Fix: Allow line breaks in sidebar__subtitle with white-space: pre-line

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,4 +4,5 @@
   font-size: 1.1em;
   color: #888;
   font-style: italic;
+  white-space: pre-line;
 } 
